 @startuml

class Agencia {

        + registrar(Vehiculo)
        + alquiarDias(unaPatente, unosDias)
}

abstract class  Vehiculo {
        + tengoPagente(Patente)
        + {abstract} alquilar(unosDias) : double
}

class TipoPlaza {
    - int precioPlaza

    + TipoPlaza(int precioPlaza)
    + alquilar(Integer numeroPlazas) : double
}

class CostoBase {
    - int valor

    + CostoBase()
    + CostoBase(int valorInicial)
    + double sumarCon(int i)
    + double multiplicar(int unosDias)
}
class PlazaBasica {

    + PlazaBasica()
}

class PlazaPremium {

    + PlazaPremium()
}
class Auto {
        - numeroPlazas

        + patente(Patente)
        + sos(Patente)
        + alquilarDias(unosDias)
}

CostoBase -* Auto
CostoBase -* Camion

class Camion {
        - pma

        + patente(Patente)
        + sos(Patente)
        + alquilarDias(unosDias)
}

class Bus {
        + sos(Patente)
        + alquilarDias(unosDias)
}

class Patente {
        - valor

        + equals(otraPatente)
}

Vehiculo *- Patente

Agencia o- "0..*" Vehiculo

Vehiculo <|-- Auto
Vehiculo <|-- Camion
Vehiculo <|-- Bus

Auto *-- TipoPlaza

TipoPlaza <|-- PlazaPremium
TipoPlaza <|-- PlazaBasica
@enduml
